# telegram-card-shop-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
Bot_Telegram.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: __init__.py  main.py
app/bot/: __init__.py  audit.py  config.py  database.py  keyboards.py  logger.py
app/bot/handlers/: __init__.py  antispam.py  cards.py  commands.py  helpers.py  language.py  navigation.py  reviews.py  states.py
app/bot/i18n/: __init__.py  en.py  it.py  locale.py
tools/: docker-build-run.ps1  maintenance.ps1
